app/services/btc-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: btc-network-policy
spec:
  podSelector:
    matchLabels:
      app: btc-info
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
    ports:
    - port: 80
